--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <title>To-Do List</title>
 </head>
 <body>
-  <div id="app"></div> 
+  <div class="sidebar">
+    <div id="sidebar" class="sidebar"></div>
+</div>
 </body>
 </html>
